--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "font-awesome": "^4.7.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
